# SPA-Time-Adrian

./: .travis.yml  Pipfile  README.md  install-powershell.sh  setup.py
flask_app/: api.py  config.py  fetch_time.py  run.py
flask_app/tests/: test_config.py  test_fetch_time.py
infra/cloudformation/: pyproject.toml  stacker-bucket.yml  stacker.yml
infra/cloudformation/.configrc/: .cfnlintrc
infra/cloudformation/blueprints/: apigateway.py  lambda.py  policies.py  s3_bucket.py  s3_stacker_bucket.py
infra/cloudformation/build-output/: adrian-dwolla-FetchTime.yml  adrian-dwolla-FetchTimeAPIResources.yml  adrian-dwolla-s3-stacker-bucket.yml
infra/cloudformation/conf/: sbx.env
infra/cloudformation/lambdas/dir_fetch_time/: func_fetch_time.py
infra/cloudformation/scripts/0_build/: build-cfn-templates.ps1  install-poetry.ps1  install-python.sh
infra/cloudformation/scripts/1_test/: run-cfn-lint.ps1
infra/pipeline/: .travis.yml
site/: index.html
