[tool.poetry]
name = "adrian_dwolla_cfn_infra"
version = "0.1.0"
description = ""
authors = ["Adrian Rodriguez <arodriguezfebres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
troposphere = "^2.6.0"
awacs = "^0.9.8"
stacker = "^1.7.0"
cfn-flip = "^1.2.2"
cfn-lint = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
